--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.15.0"
+  },
+  "devDependencies": {
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.2"
   }
 }
