--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "fastify": "^4.15.0"
   },
   "devDependencies": {
+    "prisma": "^4.11.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2"
   }
