--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@fastify/cors": "^8.2.1",
     "@prisma/client": "^4.11.0",
-    "fastify": "^4.15.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.15.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.0.2",
     "prisma": "^4.11.0",
+    "prisma-erd-generator": "^1.3.1",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2"
   }
