--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "prisma-erd-generator": "^1.3.1",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
